@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  sci-mathematics/acl2: Add github to remote-id in metadata.xml
+
 *acl2-7.0 (25 Mar 2015)
 
   25 Mar 2015; zcj <ustcscgy@163.com> +acl2-7.0.ebuild, -acl2-6.3.ebuild,
